--- a/profile.htm
+++ b/profile.htm
@@ -1,16 +1,111 @@
 <!DOCTYPE html>
 <div id="content">
-	<div class="row-fluid">
-		<div class="span2 text-center">
+	<div class="row">
+		<div id="nav-side" class="span2">
 			<!--Sidebar content-->
-			Hello!
+			<ul class="nav nav-pills nav-stacked affix">
+				<li class="nav-header">Content</li>
+				<li class="active"><a href="#who">Who</a></li>
+				<li><a href="#what">What's up</a></li>
+				<li><a href="#skills">Skills</a></li>					
+				<li><a href="#academia">Academia</a></li>
+				<li><a href="#industry">Industry</a></li>
+			</ul>
+			<div class="contact">				
+				<strong>Contact</strong><br>
+				<p><small>Office 304,<br>
+					Department of Computing,<br>
+					Imperial College London,<br>
+					London, SW7 2AZ</small></p>
+					<img src="img/email.jpg">					
+				</div>
+			</div>
+			<div class="span10">					
+				<section id="who">
+					<div class="row">
+						<div class="span7">
+							<h3>Who is here</h3>
+							<p class="lead">Hello! I am Ping-Lin Chang (張秉霖), currently a 3rd year PhD at the Department of Computing at Imperial College London.</p>
+							<p class="lead"> I am pretty much into computer science including but not limited to computer vision, graphics and machine learning. </p>
+							<br>													
+							<p class="lead">你好！我是張秉霖 (Ping-Lin Chang)，目前就讀於倫敦帝國理工大學計算機學系博士三年級。</p>
+							<p class="lead">我對電腦科學非常感興趣，其中包括電腦視覺、電腦圖學、以及機器學習等等。 </p>
+						</div>
 
+						<div class="span3">
+							<a class="dummy-link img-rounded" href="" data-toggle="tooltip" data-placement="right" title="" data-original-title="I like beer very much!"><img src="img/portrait.jpg" class="img-rounded"></a>
+						</div>
+					</div>
+				</section>				
 
-		</div>
-		<div class="span10 text-center">
-			<!--Body content-->
+				<section id="what">				
+					<h3>What's up</h3>					
+					<p class="lead"><span class="label label-important">New</span> I am looking for a postdoctoral position for visual SLAM or a more general combined topics of computer vision and machine learning.</p>			
+				</section>
 
-			YoYo!
+				<section id="skills">
+					<h3>Programming skills</h3>
+					<p class="lead">
+						<span class="badge badge-warning">C/C++</span> 
+						<span class="badge badge-warning">CUDA</span>
+						<span class="badge badge-warning">Matlab</span>						
+						<span class="badge badge-warning">Java</span>
+						<span class="badge badge-warning">Ruby</span>
+						<span class="badge badge-warning">PHP</span>
+						<span class="badge badge-warning">JavaScript</span>
+						<span class="badge badge-warning">HTML/CSS</span>						
+					</p>
+					<p class="lead">I don't have any fever of a specific programming language including imperative/functional or interpreted such as ruby/python/perl language. I get skilled with a language quickly according to the requirement of the task at hand. At the moment I program a lot CUDA and C++ for real-time applications. BTW, I am a minimalist.</p>
+				</section>
+
+				<section id="academia">
+					<h3>Academic Bio</h3>
+					<div class="row">
+						<div class="span2">
+							<img src="img/ICL.png">
+						</div>
+						<div class="span8">
+							<p class="lead">Since 2010, I have joined the <a href="http://www3.imperial.ac.uk/computing">Department of Computing</a> at <a href="http://www3.imperial.ac.uk/">Imperial College London</a> as a PhD student supervised by <a href="http://www.doc.ic.ac.uk/~eedwards">Dr. Philip "Eddie" Edwards</a> and <a href="http://www.doc.ic.ac.uk/~ajd">Prof. Andrew Davison</a>. My mainstream research is to apply dense visual SLAM to augmented reality in robotic image-guided surgery.
+							</p>
+						</div>
+					</div>
+					<br><br>
+					<div class="row">						
+						<div class="span8">
+							<p class="lead">From 2009 to 2010, I did my MSc in Artificial Intelligence at the <a href="http://www.ecs.soton.ac.uk">School of Electronics and Computer Science</a> at the <a href="http://www.southampton.ac.uk">University of Southampton</a>. My mentor was <a href="http://users.ecs.soton.ac.uk/msn">Prof. Mark S Nixon</a>, and my thesis entitled "<a href="pdf/2010_MScThesis.pdf">Learning Human Behaviour in Complex Scenes</a>" was awarded with distinction.</p>
+
+							<p class="lead">I have been greatly appreciating what Alan Perlis said: "A year spent in artificial intelligence is enough to make one believe in God."</p>
+						</div>
+						<div class="span2">
+							<img src="img/SouthECS.jpg">
+						</div>
+					</div>
+					<br><br>
+					<div class="row">
+						<div class="span2">
+							<img src="img/ncku.jpg">
+						</div>
+						<div class="span8">
+							<p class="lead"><a href="http://english.web.ncku.edu.tw">National Cheng-Kung University</a> is one of the oldest universities in Taiawn. It is located in a southern city, Tainan, where you can find a great literary atmosphere, and its campuses are just fantastic. During 2003 to 2007, I studied my BSc at the <a href="http://www.es.ncku.edu.tw">Department of Engineering Science</a> there. What a wonderful years! My engineering characteristic was probably formed at that stage.</p>
+						</div>
+
+					</div>
+				</section>
+
+				<section id="industry">
+					<h3>Industrial Bio</h3>
+					<div class="row">
+						<div class="span2">
+							<img src="img/qualcomm.png">
+						</div>
+						<div class="span8">
+							<p class="lead">
+								I did a PhD internship in Qualcomm's resaerch center in Vienna between April and August in 2012.
+							</p>						
+						</div>
+					</div>
+				</section>
+
+			</div>		
 		</div>
 	</div>
-</div>
