--- a/publication.htm
+++ b/publication.htm
@@ -5,59 +5,59 @@
 			<!--Sidebar content-->
 			<ul class="nav nav-pills nav-stacked affix">
 				<li class="nav-header">Year</li>
-				<li><a href="#2013">2013</a></li>
+				<li class="active"><a href="#2013">2013</a></li>
 				<li><a href="#2012">2012</a></li>				
 			</ul>
 		</div>
-		<div class="span10">						
+		<div class="span10">
 			<!-- 2013 -->
 			<section id="2013">
-				<div class="row">
-					<h2 class="text-left">2013</h2>					
-					<div class="span8">					
+				<div class="row">					
+					<h2>2013</h2>
+					<div class="span8">
 						<blockquote cite="10.1016/j.compmedimag.2013.01.001">
 							<p class="lead">Modeling of the bony pelvis from MRI using a multi-atlas AE-SDM for registration and tracking in image-guided robotic prostatectomy</p>
 							<h5>Journal of Computerized Medical Imaging and Graphics (CMIG), 37(2): 183-194, March 2013</h5>
 							<p class="authorship">Qinquan Gao, Ping-Lin Chang, Daniel Rueckert, S. Mohammed Ali, Daniel Cohen, Philip Pratt, Erik Mayer, Guang-Zhong Yang, Ara Darzi and Philip "Eddie" Edward</p>
 
-							<!-- on line materials -->
-							<a href="2013_CMIG.pdf" data-toggle="tooltip" data-placement="right" title="" data-original-title="PDF">
+							<!-- online materials -->
+							<a href="pdf/2013_CMIG.pdf" data-toggle="tooltip" data-placement="right" title="" data-original-title="PDF">
 								<img src="img/publication/2013_CMIG_pdf.png" class="pdf-thumbnail">
 							</a>
-							<a href="http://youtu.be/w0iYfNo58MY" data-toggle="tooltip" data-placement="right" title="" data-original-title="Phantom AR video on Youtube" target="_blanket">
+							<a href="http://youtu.be/w0iYfNo58MY" data-toggle="tooltip" data-placement="right" title="" data-original-title="Phantom AR video on Youtube">
 								<img src="http://img.youtube.com/vi/w0iYfNo58MY/1.jpg" class="youtube-thumbnail">
 							</a>
-							<a href="http://youtu.be/N4vCPWSMISs" data-toggle="tooltip" data-placement="right" title="" data-original-title="Real surgical AR video on Youtube" target="_blanket">
+							<a href="http://youtu.be/N4vCPWSMISs" data-toggle="tooltip" data-placement="right" title="" data-original-title="Real surgical AR video on Youtube">
 								<img src="http://img.youtube.com/vi/N4vCPWSMISs/1.jpg" class="youtube-thumbnail">
 							</a>
 						</blockquote>
 					</div>		
 					<div class="span2">
-						<img src="img/publication/2013_CMIG_seg.png" class="img-rounded paper-img">
-						<img src="img/publication/2013_CMIG_tracking.png" class="img-rounded paper-img">
+						<img src="img/publication/2013_CMIG_seg.png" class="paper-img">
+						<img src="img/publication/2013_CMIG_tracking.png" class="paper-img">
 					</div>
 				</div>
 			</section>
-
+			
 			<!-- 2012 -->
 			<section id="2012">
 				<div class="row">
-					<h2 class="text-left">2012</h2>
+					<h2>2012</h2>
 					<div class="span8">
 						<blockquote cite="10.1007/978-3-642-32630-1_1">
 							<p class="lead">2D/3D registration of a preoperative model with endoscopic video using colour-consistency</p>
 							<h5>Proceeding of the Augmented Environments for Computer-Assisted Interventions (AE-CAI) in Conjunction with MICCAI, pages 1-12, October 2012</h5>
 							<p class="authorship">Ping-Lin Chang, Dongbin Chen, Daniel Cohen and Philip "Eddie" Edwards</p>
 
-							<!-- on line materials -->
-							<a href="2012_AECAI.pdf" data-toggle="tooltip" data-placement="right" title="" data-original-title="PDF">
+							<!-- online materials -->
+							<a href="pdf/2012_AECAI.pdf" data-toggle="tooltip" data-placement="right" title="" data-original-title="PDF">
 								<img src="img/publication/2012_AECAI_pdf.png" class="pdf-thumbnail">
 							</a>							
 						</blockquote>
 					</div>		
 					<div class="span2">
-						<img src="img/publication/2012_AECAI_idea.png" class="img-rounded paper-img">
-						<img src="img/publication/2012_AECAI_pose.png" class="img-rounded paper-img">
+						<img src="img/publication/2012_AECAI_idea.png" class="paper-img">
+						<img src="img/publication/2012_AECAI_pose.png" class="paper-img">
 					</div>
 
 					<div class="span8 paper">						
@@ -66,15 +66,15 @@
 							<h5>Journal of Medical Systems, 36(5):2761-2768, October 2012</h5>
 							<p class="authorship">Wei-Guang Teng and Ping-Lin Chang</p>
 
-							<!-- on line materials -->
-							<a href="2012_JMS.pdf" data-toggle="tooltip" data-placement="right" title="" data-original-title="PDF">
+							<!-- online materials -->
+							<a href="pdf/2012_JMS.pdf" data-toggle="tooltip" data-placement="right" title="" data-original-title="PDF">
 								<img src="img/publication/2012_JMS_pdf.png" class="pdf-thumbnail">
 							</a>							
 						</blockquote>
 					</div>		
 					<div class="span2 paper-img">
-						<img src="img/publication/2012_JMS_som.png" class="img-rounded paper-img">
-						<img src="img/publication/2012_JMS_seg.png" class="img-rounded paper-img">
+						<img src="img/publication/2012_JMS_som.png" class="paper-img">
+						<img src="img/publication/2012_JMS_seg.png" class="paper-img">
 					</div>					
 
 
@@ -84,22 +84,23 @@
 							<h5>IET Image Processing, 6(5):463-472, July 2012</h5>
 							<p class="authorship">Wei-Guang Teng, Ping-Lin Chang and Cheng-Ta Yang</p>
 
-							<!-- on line materials -->
-							<a href="2012_IET.pdf" data-toggle="tooltip" data-placement="right" title="" data-original-title="PDF">
+							<!-- online materials -->
+							<a href="pdf/2012_IET.pdf" data-toggle="tooltip" data-placement="right" title="" data-original-title="PDF">
 								<img src="img/publication/2012_IET_pdf.png" class="pdf-thumbnail">
 							</a>
-							<a href="2009_PCM.pdf" data-toggle="tooltip" data-placement="right" title="" data-original-title="PDF of 2009 PCM colour version">
+							<a href="pdf/2009_PCM.pdf" data-toggle="tooltip" data-placement="right" title="" data-original-title="PDF of 2009 PCM colour version">
 								<img src="img/publication/2009_PCM_pdf.png" class="pdf-thumbnail">
 							</a>
 						</blockquote>
 					</div>		
 					<div class="span2">
-						<img src="img/publication/2012_IET_quadtree.png" class="img-rounded paper-img">
-						<img src="img/publication/2012_IET_pallete.png" class="img-rounded paper-img">
+						<img src="img/publication/2012_IET_quadtree.png" class="paper-img">
+						<img src="img/publication/2012_IET_pallete.png" class="paper-img">
 					</div>
 
 				</div>
 			</section>
+			
 		</div>
 	</div>
 </div>
