--- a/home.htm
+++ b/home.htm
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<div id="content">
+<div class="content">
 	<div class="row">
 		<div id="nav-side" class="span2">
 			<!--Sidebar content-->
 			<ul class="nav nav-pills nav-stacked affix">
 				<li class="nav-header">Content</li>
 				<li class="active"><a href="#who">Who</a></li>
-				<li><a href="#what">What's up</a></li>
+				<li><a href="#news">News</a></li>
 				<li><a href="#skills">Skills</a></li>					
 				<li><a href="#academia">Academia</a></li>
 				<li><a href="#industry">Industry</a></li>
@@ -25,11 +25,9 @@
 					<div class="row">
 						<div class="span7">
 							<h3>Who is here</h3>
-							<p class="lead">Hello! I am Ping-Lin Chang (張秉霖), currently a 3rd year PhD at the Department of Computing at Imperial College London.</p>
-							<p class="lead"> I am pretty much into computer science including but not limited to computer vision, graphics and machine learning. </p>
+							<p class="lead">Hello! I am Ping-Lin Chang (張秉霖), currently a 3rd year PhD at the Department of Computing at Imperial College London. I am pretty much into computer science including but not limited to computer vision, graphics and machine learning. </p>
 							<br>													
-							<p class="lead">你好！我是張秉霖 (Ping-Lin Chang)，目前就讀於倫敦帝國理工大學計算機學系博士三年級。</p>
-							<p class="lead">我對電腦科學非常感興趣，其中包括電腦視覺、電腦圖學、以及機器學習等等。 </p>
+							<p class="lead">你好！我是張秉霖 (Ping-Lin Chang)，目前就讀於倫敦帝國理工大學計算機學系博士三年級。我對電腦科學非常感興趣，其中包括電腦視覺、電腦圖學、以及機器學習等等。 </p>
 						</div>
 
 						<div class="span3">
@@ -38,9 +36,9 @@
 					</div>
 				</section>				
 
-				<section id="what">				
-					<h3>What's up</h3>					
-					<p class="lead"><span class="label label-important">New</span> I am looking for a postdoctoral position for visual SLAM or a more general combined topics of computer vision and machine learning.</p>			
+				<section id="news">				
+					<h3>News</h3>					
+					<p class="lead"><span class="label label-important">Last</span> I am looking for a postdoctoral position for visual SLAM or general topics in computer vision and machine learning.</p>			
 				</section>
 
 				<section id="skills">
@@ -55,7 +53,7 @@
 						<span class="badge badge-warning">JavaScript</span>
 						<span class="badge badge-warning">HTML/CSS</span>						
 					</p>
-					<p class="lead">I don't have any fever of a specific programming language including imperative/functional or interpreted such as ruby/python/perl language. I get skilled with a language quickly according to the requirement of the task at hand. At the moment I program a lot CUDA and C++ for real-time applications. BTW, I am a minimalist.</p>
+					<p class="lead">I get skilled with a language quickly according to the requirement of the task at hand. At the moment I program a lot CUDA and C++ for real-time applications. BTW, I am a minimalist.</p>
 				</section>
 
 				<section id="academia">
@@ -86,7 +84,7 @@
 							<img src="img/ncku.jpg">
 						</div>
 						<div class="span8">
-							<p class="lead"><a href="http://english.web.ncku.edu.tw">National Cheng-Kung University</a> is one of the oldest universities in Taiawn. It is located in a southern city, Tainan, where you can find a great literary atmosphere, and its campuses are just fantastic. During 2003 to 2007, I studied my BSc at the <a href="http://www.es.ncku.edu.tw">Department of Engineering Science</a> there. What a wonderful years! My engineering characteristic was probably formed at that stage.</p>
+							<p class="lead"><a href="http://english.web.ncku.edu.tw">National Cheng-Kung University</a> is one of the oldest universities in Taiwan. It is located in a southern city, Tainan, where you can find a great literary atmosphere, and its campuses are just fantastic. During 2003 to 2007, I studied my BSc at the <a href="http://www.es.ncku.edu.tw">Department of Engineering Science</a> there. What a wonderful years! My engineering characteristic was probably formed at that stage.</p>
 						</div>
 
 					</div>
