--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
 	  <![endif]-->
 
 	</head>
-	<body data-spy="scroll" data-target="#nav-side">
+	<body data-spy="scroll">
 		<!-- Wrap all page content here -->
 		<div id="wrap">
 			<!-- Fixed navbar -->
@@ -30,13 +30,13 @@
 						</button>
 						<div class="nav-collapse collapse">
 							<ul class="nav nav-pills">
-								<li id="profile" class="nav-page-btn active"><a href=""><i class="icon-user"></i> Profile</a></li>
-								<li id="publication" class="nav-page-btn"><a href=""><i class="icon-book"></i> Publication</a></li>
+								<li id="home" class="nav-page-btn active"><a href=""><i class="icon-user"></i> Home </a></li>
+								<li id="publication" class="nav-page-btn"><a href=""><i class="icon-book"></i> Publication </a></li>
 								<li class="dropdown">
-									<a href="" class="nav-page-btn dropdown-toggle" data-toggle="dropdown"><i class="icon-beer"></i> Research<span class="caret"></span></a>
+									<a href="" class="nav-page-btn dropdown-toggle" data-toggle="dropdown"><i class="icon-beer"></i> Projects <span class="caret"></span></a>
 									<ul class="dropdown-menu">									
 										<li class="nav-header">Computer Vision</li>										
-										<li id="dense_tracking" class="nav-page-btn disabled"><a href="">Dense Tracking</a></li>
+										<li id="dense_tracking" class="nav-page-btn disabled"><a href="">Model-Based Tracking</a></li>
 										<li id="reconstruction" class="nav-page-btn disabled"><a href="">Stereo Reconstruction</a></li>
 										<li class="divider"></li>									
 										<li class="nav-header">Computer Grahpic</li>
@@ -46,7 +46,7 @@
 								</li>
 
 								<li class="nav-page-btn dropdown">
-									<a href="" class="nav-page-btn dropdown-toggle" data-toggle="dropdown"><i class="icon-github"></i> Code<span class="caret"></span></a>
+									<a href="" class="nav-page-btn dropdown-toggle" data-toggle="dropdown"><i class="icon-github"></i> Code <span class="caret"></span></a>
 									<ul class="dropdown-menu">
 										<li class="nav-header">Must Read</li>
 										<li id="introduction" class="nav-page-btn disabled"><a href="">Instructions</a></li>
@@ -73,11 +73,11 @@
 		<!-- Sticky footer -->
 		<div id="footer">
 			<div class="container text-center">
-				<p class="footer">Copyright &copy; 2013 Ping-Lin Chang, All Right Reserved. This Website Is Powered by <a class="footer" href="http://twitter.github.io/bootstrap" target="_blank">Bootstrap</a> and <a class="footer" href="http://jquery.com" target="_blank">jQuery</a>.</p>
+				<p class="footer">Copyright &copy; 2013 Ping-Lin Chang. All Right Reserved. This Website Is Powered by <a class="footer" href="http://twitter.github.io/bootstrap" target="_blank">Bootstrap</a> and <a class="footer" href="http://jquery.com" target="_blank">jQuery</a>.</p>
 			</div>
 		</div>
 
-		<script src="js/jquery-1.9.1.min.js"></script>
+		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/main.js"></script>
 	</body>
