--- a/research/reconstruction.htm
+++ b/research/reconstruction.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<div id="content">
+<div class="content">
 	<div class="row-fluid">
 		<div class="span2 text-center">
 			<!--Sidebar content-->
