update pdf status and news for MICCAI 2013

--- a/home.htm
+++ b/home.htm
@@ -39,7 +39,7 @@
 				<section id="news">				
 					<h3>News</h3>					
 					<p class="lead"><span class="label label-important">Job</span> I am looking for a postdoctoral position for visual SLAM or general topics in computer vision and machine learning.</p>
-					<p class="lead"><span class="label label-info">MICCAI 2013</span> I will attend MICCAI 2013 at Nagoya Japan and present my recent work regarding real-time stereo reconstruction. See Publication page for more details.</p>
+					<p class="lead"><span class="label label-info">MICCAI 2013</span> I will attend MICCAI 2013 at Nagoya Japan and present my recent work regarding real-time stereo reconstruction for image-guided surgery. See Publication page for more details.</p>
 				</section>
 
 				<section id="skills">
