--- a/publication.htm
+++ b/publication.htm
@@ -32,7 +32,7 @@
 							</div>						
 						
 							<!-- online materials -->
-							[<a href="pdf/2013_MICCAI.pdf" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="PDF file coming soon">pdf</a>]
+							[<a href="pdf/2013_MICCAI.pdf" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="PDF file">pdf</a>]
 							
 							[<a href="http://youtu.be/jqfsv-G7of0" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Demo video on Youtube">video</a>]
 
