fix active on nav-side problem

--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
 	  <![endif]-->
 
 	</head>
-	<body data-spy="scroll">
+	<body data-spy="scroll" data-target="#nav-side">
 		<!-- Wrap all page content here -->
 		<div id="wrap">
 			<!-- Fixed navbar -->
