multiple classes selection problem which affects active bottons on nav-bar and nav-side

--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
 							<ul class="nav nav-pills">
 								<li id="home" class="nav-page-btn active"><a href=""><i class="icon-user"></i> Home </a></li>
 								<li id="publication" class="nav-page-btn"><a href=""><i class="icon-book"></i> Publication </a></li>
-								<li class="dropdown">
+								<li class="nav-page-btn dropdown">
 									<a href="" class="nav-page-btn dropdown-toggle" data-toggle="dropdown"><i class="icon-beer"></i> Projects <span class="caret"></span></a>
 									<ul class="dropdown-menu">									
 										<li class="nav-header">Computer Vision</li>										
