changed paper titled to leading capitalisation

--- a/publication.htm
+++ b/publication.htm
@@ -46,7 +46,7 @@
 
 					<div class="span8">
 						<blockquote cite="10.1016/j.compmedimag.2013.01.001">
-							<h4>Modeling of the bony pelvis from MRI using a multi-atlas AE-SDM for registration and tracking in image-guided robotic prostatectomy</h4>
+							<h4>Modeling of the Bony Pelvis from MRI Using a Multi-Atlas AE-SDM for Registration and Tracking in Image-Guided Robotic Prostatectomy</h4>
 							<p class="authorship">Qinquan Gao, <u>Ping-Lin Chang</u>, Daniel Rueckert, S. Mohammed Ali, Daniel Cohen, Philip Pratt, Erik Mayer, Guang-Zhong Yang, Ara Darzi and Philip "Eddie" Edward</p>
 							<h6>Journal of Computerized Medical Imaging and Graphics (CMIG), 37(2): 183-194, March 2013</h6>
 							<!-- Abstract -->							
@@ -81,7 +81,7 @@
 					<h2>2012</h2>
 					<div class="span8">
 						<blockquote cite="10.1007/978-3-642-32630-1_1">
-							<h4>2D/3D registration of a preoperative model with endoscopic video using colour-consistency</h4>
+							<h4>2D/3D Registration of a Preoperative Model with Endoscopic Video Using Colour-Consistency</h4>
 							<h6>Proceedings of the Augmented Environments for Computer-Assisted Interventions (AE-CAI) in Conjunction with MICCAI, pages 1-12, October 2012</h6>
 							<p class="authorship"><u>Ping-Lin Chang</u>, Dongbin Chen, Daniel Cohen and Philip "Eddie" Edwards</p>
 
@@ -108,7 +108,7 @@
 
 					<div class="span8">						
 						<blockquote cite="10.1007/s10916-011-9752-8">
-							<h4>Identifying regions of interest in medical images using self-organizing maps</h4>
+							<h4>Identifying Regions of Interest in Medical Images Using Self-Organizing Maps</h4>
 							<h6>Journal of Medical Systems, 36(5):2761-2768, October 2012</h6>
 							<p class="authorship">Wei-Guang Teng and <u>Ping-Lin Chang</u></p>
 
@@ -135,7 +135,7 @@
 
 					<div class="span8">						
 						<blockquote cite="10.1049/iet-ipr.2011.0029">
-							<h4>Adaptive and efficient colour quantisation based on a growing self-organising map</h4>
+							<h4>Adaptive and Efficient Colour Quantisation Based on a Growing Self-Organising Map</h4>
 							<h6>IET Image Processing, 6(5):463-472, July 2012</h6>
 							<p class="authorship">Wei-Guang Teng, <u>Ping-Lin Chang</u> and Cheng-Ta Yang</p>
 
