--- a/index.htm
+++ b/index.htm
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Ping-Lin Chang @ Imperial College London </title>	
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<title>Ping-Lin Chang @ Imperial College London </title>	
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!-- CSS include -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/font-awesome.min.css" rel="stylesheet">
-	<link href="css/main.css" rel="stylesheet">
-
-	<link rel="icon" type="image/jpeg" href="favicon.jpeg">
-	<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-	<!--[if lt IE 9]>
-	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	  <![endif]-->
-
+		<!-- CSS include -->
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/font-awesome.min.css" rel="stylesheet">
+		<link href="css/main.css" rel="stylesheet">
+		<link rel="icon" type="image/jpeg" href="favicon.jpeg">
+		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+		<!--[if lt IE 9]>
+		  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		  <![endif]-->
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-42952771-1', 'ic.ac.uk');
+			ga('send', 'pageview');
+		</script>
 	</head>
 	<body data-spy="scroll" data-target="#nav-side">
 		<!-- Wrap all page content here -->
@@ -80,13 +86,5 @@
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/main.js"></script>
-		<script type="text/javascript">
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-			ga('create', 'UA-42952771-1', 'ic.ac.uk');
-			ga('send', 'pageview');
-		</script>
 	</body>
 	</html>
