change description for the source code

--- a/publication.htm
+++ b/publication.htm
@@ -36,7 +36,7 @@
 							
 							[<a href="http://youtu.be/jqfsv-G7of0" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Demo video on Youtube">video</a>]
 
-							[<a href="code/matlab_cuda_for_miccai2013.zip" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Demo codes with Matlab CUDA-MEX files">code</a>]
+							[<a href="code/matlab_cuda_for_miccai2013.zip" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Matlab CUDA-MEX files">code</a>]
 						</blockquote>
 					</div>
 					<div class="span2">
