--- a/home.htm
+++ b/home.htm
@@ -31,15 +31,18 @@
 						</div>
 
 						<div class="span3">
-							<a class="dummy-link img-rounded" href="" data-toggle="tooltip" data-placement="right" title="" data-original-title="I like beer very much!"><img src="img/portrait.jpg" class="img-rounded"></a>
+							<a class="dummy-link" href="" data-toggle="tooltip"
+                        data-placement="right" title="" data-original-title="21">
+                        <img src="img/portrait_v3.jpg"
+							   class="img-thumbnail"></a>
 						</div>
 					</div>
 				</section>				
 
 				<section id="news">				
 					<h3>News</h3>					
-					<p class="lead"><span class="label label-important">Job</span> I am looking for a postdoctoral position for visual SLAM or general topics in computer vision and machine learning.</p>
-					<p class="lead"><span class="label label-info">MICCAI 2013</span> I will attend MICCAI 2013 at Nagoya Japan and present my recent work regarding real-time stereo reconstruction for image-guided surgery. See Publication page for more details.</p>
+               <p class="lead"><span class="label label-important">Relocation</span> 
+               I am now working as a RA at CMIC surgical vision group in UCL.</p>
 				</section>
 
 				<section id="skills">
